Removed unnecessary Boolean object creations